# Bibliometrics

./: .gitignore  CITATION.cff  INSTALL.md  LICENSE  README.md  TECHNICAL_MANUAL.md  app_dashboard.py  enrich_entities.py  install-mac.command  install.bat  install.sh  manual_select_texts_gui.md  openalex_converter.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run.sh  run_tests_ppx.py  semantic_bertopic_preset.py  software_gui_pro_4.py  streamlit_pipeline_runner.py  test_openalex.py  viz_network_interface_2.py  viz_network_plus.py
.github/workflows/: tests.yml
Query_OpenAlex/: openalex_query_7.py
TEXTS SELECT/: IMPROVEMENTS_SUMMARY.md  INTERFACE_DESCRIPTIONS.md  SCRIPT_EVALUATION.md  excel_analyzer.py  select_texts_gui_v7_intelligent.py
bibliometric_analysis/: __init__.py
bibliometric_analysis/baselines/: __init__.py  histograms.py  openalex_baselines.py
bibliometric_analysis/core/: __init__.py  config.py  inputs.py  pipeline.py  summaries.py
bibliometric_analysis/parsers/: pop.py  (+5 more)
docs/: architecture.md  current_rating_v16.md  dependencies.md  export_schema.md  external_validation.md  ontology_layer.md  testing.md  upgrade_audit_v16.md  upgrade_roadmap_to_90.md  ux_strategy.md
installers/: README.md
metrics/: __init__.py  percentiles.py
notebooks/: external_validation_template.ipynb
tests/: test_baselines.py  test_baselines_extended.py  test_cli_smoke.py  test_corpus_build.py  test_dashboard_helpers.py  test_dashboard_imports.py  test_e2e_offline_excel.py  test_enrichment.py  test_export_schema.py  test_external_validation_scaffold.py  test_fractional_counting.py  test_global_baselines.py  test_gui_launchers.py  test_gui_shell.py  test_imports.py  test_mncs.py  test_network.py  test_ontology.py  test_openalex_client.py  test_openalex_query.py  test_openalex_works.py  test_parsers_openalex.py  test_parsers_pop.py  test_parsers_scopus.py  test_parsers_wos.py  test_percentiles.py  test_pipeline.py  test_streamlit_runner.py
(+59 files in other folders)
