[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bibliometric-analysis"
version = "16.0.0"
description = "Bibliometric/scientometric research software with OpenAlex-based normalization"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Luís Raimundo", email = "lmr.2020@outlook.pt" }]
keywords = ["bibliometrics", "scientometrics", "openalex", "citations"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "requests>=2.28",
    "tqdm>=4.65",
    "XlsxWriter>=3.1",
    "openpyxl>=3.1",
    "networkx>=3.0",
]

[project.optional-dependencies]
network = ["pyvis>=0.3", "python-louvain>=0.16", "igraph>=0.11", "leidenalg>=0.10"]
dashboard = ["streamlit>=1.28", "scikit-learn>=1.3"]
enrichment = ["rapidfuzz>=3.0"]
topic = ["sentence-transformers>=2.2", "umap-learn>=0.5", "hdbscan>=0.8", "bertopic>=0.16"]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.4"]
all = [
    "bibliometric-analysis[network,dashboard,enrichment,topic,dev]",
]

[project.urls]
Homepage = "https://github.com/LuisMRaimundo/Bibliometrics"
Repository = "https://github.com/LuisMRaimundo/Bibliometrics"
Documentation = "https://github.com/LuisMRaimundo/Bibliometrics/blob/main/TECHNICAL_MANUAL.md"

[tool.setuptools.packages.find]
include = ["bibliometric_analysis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.coverage.run]
source = ["bibliometric_analysis", "metrics"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
